simple ui done, shortened api methods names
